<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/underline2"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/drawer"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mainpagehotcofffee"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drawertextview"
        android:text="@string/app_name"
        android:layout_below="@+id/drawer"
        android:textColor="@color/brown"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondrawertextview"
        android:layout_below="@id/drawertextview"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/menuins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:layout_below="@id/drawertextview"
        android:textColor="@color/brown"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/location"/>


    <View
        android:layout_height="15dp"
        android:background="@color/brown"
        android:layout_width="match_parent"
        android:layout_below="@id/location"
        style="@style/line"/>

</RelativeLayout>