<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/underline">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/hotbutton"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainpagehotcofffee" />

    <Button
        android:id="@+id/hotbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:text="@string/hotcoffee"
        app:layout_constraintBottom_toTopOf="@+id/dessertimage"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/coldbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainpageicecoffee" />


    <Button
        android:id="@+id/coldbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:text="@string/coldcoffee"
        app:layout_constraintBottom_toTopOf="@+id/withoutcoffeeimageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/dessertimage"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/dessertbutton"
        app:layout_constraintEnd_toStartOf="@+id/withoutcoffeeimageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotbutton"
        app:srcCompat="@drawable/mainpagedessert" />

    <Button
        android:id="@+id/dessertbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="151dp"
        android:layout_weight="1"
        android:text="@string/dessert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dessertimage"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/dessertimage"
        app:layout_constraintTop_toBottomOf="@+id/dessertimage" />

    <ImageView
        android:id="@+id/withoutcoffeeimageView"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/withoutcoffeebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dessertimage"
        app:layout_constraintTop_toBottomOf="@+id/coldbutton"
        app:srcCompat="@drawable/mainpagewithoutcoffee" />

    <Button
        android:id="@+id/withoutcoffeebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="151dp"
        android:layout_weight="1"
        android:text="@string/without"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/withoutcoffeeimageView"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/withoutcoffeeimageView"
        app:layout_constraintTop_toBottomOf="@+id/withoutcoffeeimageView" />


</androidx.constraintlayout.widget.ConstraintLayout>