<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/underline">


    <ImageView
        android:id="@+id/imageViewDH"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/hotbuttondrawerhome"
        app:layout_constraintEnd_toStartOf="@+id/imageView2DH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainpagehotcofffee" />

    <Button
        android:id="@+id/hotbuttondrawerhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:text="@string/hotcoffee"
        app:layout_constraintBottom_toTopOf="@+id/dessertimageDH"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDH"
        app:layout_constraintStart_toStartOf="@+id/imageViewDH"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDH" />

    <ImageView
        android:id="@+id/imageView2DH"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/coldbuttondrawerhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDH"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainpageicecoffee" />


    <Button
        android:id="@+id/coldbuttondrawerhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:layout_weight="1"
        android:text="@string/coldcoffee"
        app:layout_constraintBottom_toTopOf="@+id/withoutcoffeeimageViewDH"
        app:layout_constraintEnd_toEndOf="@+id/imageView2DH"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/imageView2DH"
        app:layout_constraintTop_toBottomOf="@+id/imageView2DH" />

    <ImageView
        android:id="@+id/dessertimageDH"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/dessertbuttondrawerhome"
        app:layout_constraintEnd_toStartOf="@+id/withoutcoffeeimageViewDH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotbuttondrawerhome"
        app:srcCompat="@drawable/mainpagedessert" />

    <Button
        android:id="@+id/dessertbuttondrawerhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="151dp"
        android:layout_weight="1"
        android:text="@string/dessert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dessertimageDH"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/dessertimageDH"
        app:layout_constraintTop_toBottomOf="@+id/dessertimageDH" />

    <ImageView
        android:id="@+id/withoutcoffeeimageViewDH"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/withoutcoffeebuttondrawerhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dessertimageDH"
        app:layout_constraintTop_toBottomOf="@+id/coldbuttondrawerhome"
        app:srcCompat="@drawable/mainpagewithoutcoffee" />

    <Button
        android:id="@+id/withoutcoffeebuttondrawerhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="151dp"
        android:layout_weight="1"
        android:text="@string/without"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/withoutcoffeeimageViewDH"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/withoutcoffeeimageViewDH"
        app:layout_constraintTop_toBottomOf="@+id/withoutcoffeeimageViewDH" />


</androidx.constraintlayout.widget.ConstraintLayout>